# bank-client-classification

./: README.md  pyproject.toml  script.ipynb
