[project]
name = "bank-client-classification"
version = "0.1.0"
description = "\"Machine Learning Classification Project for Bank Customer Analysis\""
authors = [
    {name = "cruchau",email = "cruchau@amazon.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
